--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ Ta-ta-ta ta-ta-ra-ta-ra-ta</p>
 
     <img id="minhaImagem" src="rubis.png" alt="Descrição da imagem" width="350">
 
- <img id="minhaImagem" src="mor.png" alt="Descrição da imagem" width="300">
+ 
+    <img id="minhaImagem" src="1.jpg" alt="Descrição da imagem" width="300">
 
 
 
