--- a/index.html
+++ b/index.html
@@ -184,16 +184,15 @@ Ta-ta-ta ta-ta-ra-ta-ra-ta</p>
 </p>
 </body>
 </html>
-
-    <img id="minhaImagem" src="flordela.png" alt="Descrição da imagem" width="350">
-
-</p> essa flor feita com bastante carinho pra você </p>
-
-    <img id="minhaImagem" src="rubis.png" alt="Descrição da imagem" width="350">
-
  
+<div class="image-container">
+    <img id="minhaImagem" src="flordela.png" alt="Descrição da imagem" width="350">
+    </p> essa flor feita com bastante carinho pra você </p>
+    <img id="minhaImagem" src="rubis.png" alt="Descrição da imagem" width="350">
+    </p> a frase biblica me mais me lembra você</p>
     <img id="minhaImagem" src="1.jpg" alt="Descrição da imagem" width="300">
-
+    </p>  ❤️ </p>
+</div>
 
 
     <script>
@@ -206,3 +205,11 @@ Ta-ta-ta ta-ta-ra-ta-ra-ta</p>
 </html>
 
 <script src="script.js?v=2"></script>
+
+      <script // Atualiza a página automaticamente a cada 10 segundos
+        setTimeout(() => {
+            location.reload();
+        }, 60000); // 60 segundos
+    </script>
+</body>
+</html>
