--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Ta-ta-ta ta-ta-ra-ta-ra-ta</p>
             answer: "TE VER SEM ROUPA"
         },
         {
-            question: "Onde foi nosso primeiro beujo?",
+            question: "Onde foi nosso primeiro beijo?",
             options: ["15 de julho", "No ponto de onibus", "20 de setembro", "10 de março"],
             answer: "No ponto de onibus"
         },
