--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@ Ta-ta-ta ta-ta-ra-ta-ra-ta</p>
     Seu navegador não suporta o elemento de vídeo.  
 </video>
 
+
+</html>  <!-- quarto Video -->  
+<video controls>  
+    <source src="Morte.mp4" type="video/mp4">  
+    Seu navegador não suporta o elemento de vídeo.  
+</video>
+
 <!-- Link para a música no YouTube -->  <a href="https://youtu.be/OCMDyAteZY8?si=XPeu_pAEXsDLmh4Q target="_blank" class="music-link">  
     Ouvir "Falling in Love" - Elvis Presley  
 </a>
