--- a/index.html
+++ b/index.html
@@ -364,6 +364,14 @@
     <source src="Video3.mp4" type="video/mp4">  
     Seu navegador não suporta o elemento de vídeo.  
 </video>  
+    
+    
+    </body>  
+</html>  <!-- zero2 vídeo --> 
+    <video controls>  
+    <source src="Video8.mp4" type="video/mp4">  
+    Seu navegador não suporta o elemento de vídeo.  
+</video>  
 
 </body>  
 </html>  <!-- Primeiro vídeo -->  
